--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.kresnaapps">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/kresna_logo_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/kresna_logo_icon"
@@ -34,26 +34,6 @@
         </activity>
         <activity
             android:name=".FunFactActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".LearnQuizActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".LearnSocialActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".LearnMultiplicationActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".LearnSubstractionActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".LearnAdditionActivity"
             android:configChanges="orientation"
             android:screenOrientation="landscape" />
         <activity
